fixed loading issue

--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall ">
 								<a href="https://starryhoroscope.netlify.app/" class="image fit thumb"><img src="images/workhoroscope.png" alt="" /></a>
 								<h3>Horoscope Website</h3>
 								<p>Created using Javascript, HTML, CSS</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall ">
 								<a href="https://quicktodolist.netlify.app/" class="image fit thumb"><img src="images/worktodo.png" alt="" /></a>
 								<h3>To Do List Website</h3>
 								<p>Created using Javascript, HTML, CSS</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall ">
 								<a href="https://atlanticnewspaper.netlify.app/" class="image fit thumb"><img src="images/workatlantic.png" alt="" /></a>
 								<h3>Atlantic Newspaper</h3>
 								<p>Responsive landing page using HTML and CSS</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall ">
 								<a href="https://nytimesnewspaper.netlify.app/" class="image fit thumb"><img src="images/workNyt.png" alt="" /></a>
 								<h3>New York Times Newspaper</h3>
 								<p>Responsive landing page using HTML and CSS</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<article class="col-6 col-12-xsmall ">
 								<a href="https://jwleadership.netlify.app/" class="image fit thumb"><img src="images/workjwli.png" alt="" /></a>
 								<h3>Japanese Women Leadership Initiative</h3>
 								<p>Responsive landing page using HTML and CSS</p>
