fixed form action

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<p>Currently accepting new clients, feel free to contact me for a consultation!</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="post" data-netlify="true">
+								<form method="post" action="POST" data-netlify="true">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
