changed method type

--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
 						<p>Currently accepting new clients, feel free to contact me for a consultation!</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="POST" data-netlify="true">
+								<form method="POST" action="POST" data-netlify="true">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
 										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-										<!-- <div class="col-12">
+										<div class="col-12">
 											<input type="file" name="myfile" id="myfile" placeholder="Upload File" rows="4"/>
-										</div> -->
+										</div>
 										<div class="col-12">
 											<div data-netlify-recaptcha="true"></div>
 										</div>
