added more projects

--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Welcome! <br />
-							Get to know me: </h2>
+							<h2>Welcome! Get to know me: </h2>
 						</header>
-						<p>Growing up, my mother toiled on a Vietnamese rice field and traversed rugged terrain barefoot and by buffalo. My success and pursuit is not in spite of my background, but because of it. This instilled in me a profound appreciation for resilience and resourcefulness. These qualities have propelled me towards success in my career as a Biochemist, where I developed life-changing medications for patients who lack access to quality healthcare. Through this work, I learned the value of tenacity in the face of failure, a trait I also apply as a Software Engineer. My desire to broaden my impact and reach more individuals led me to pursue a career in software engineering, where I can develop impactful applications that can make a tangible difference in people's lives. My background has imbued me with a unique perspective, one that drives me to tackle challenges with empathy and determination - and I am eager to leverage my skills and knowledge towards this endeavor. So let's see what we can build together!</p>
+						<p>Growing up, my mother toiled on a Vietnamese rice field and traversed rugged terrain barefoot and by buffalo.<strong> My success and pursuit is not in spite of my background, but because of it.</strong> This instilled in me a profound appreciation for resilience and resourcefulness. These qualities have propelled me towards success in my career as a Biochemist, where I developed life-changing medications for patients who lack access to quality healthcare. Through this work, I learned the value of tenacity in the face of failure, a trait I also apply as a Software Engineer. My desire to broaden my impact and reach more individuals led me to pursue a career in software engineering, where I can develop impactful applications that can make a tangible difference in people's lives. My background has imbued me with a unique perspective, one that drives me to tackle challenges with empathy and determination - and I am eager to leverage my skills and knowledge towards this endeavor. So let's see what we can build together!</p>
 						<ul class="actions">
-							<li><a href="#skills" class="button">Learn More</a></li>
+							<li><a href="#two" class="button">Projects</a></li>
 						</ul>
 					</section>
 
@@ -44,27 +43,67 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://starryhoroscope.netlify.app/" class="image fit thumb"><img src="images/workhoroscope.png" alt="" /></a>
+								<a href="https://easy-palindrome-checker.netlify.app/" class="image fit thumb" target="_blank"><img src="images/palindrome.png" alt="" /></a>
+								<h3>Palindrome Checker</h3>
+								<p>Created a <strong>server-side</strong> palindrome checker in the <strong>node enviroment</strong> (Javascript, CSS, HTML, Node.js)</p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://easycoinflip.netlify.app/" class="image fit thumb" target="_blank"><img src="images/coinflip.png" alt="" /></a>
+								<h3>Coin Flip</h3>
+								<p>Guess heads or tails! Created a <strong>server-side</strong> coin flip in the <strong>node enviroment</strong> (Javascript, CSS, HTML, Node.js)</p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://matchingcard-game.netlify.app/" class="image fit thumb" target="_blank"><img src="images/matchingcardgame.png" alt="" /></a>
+								<h3>Memory Game</h3>
+								<p>Play an animal themed matching card game (Javascript, CSS, HTML)</p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://astronomypic.netlify.app/" class="image fit thumb" target="_blank"><img src="images/simplenasa.png" alt="" /></a>
+								<h3>NASA API</h3>
+								<p>Utilized NASA's API to generate astronomy pictures depending on the users chosen date (Javascript, CSS, HTML)</p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://nasafacilitiesweather.netlify.app/" class="image fit thumb" target="_blank"><img src="images/complexnasa.png" alt="" /></a>
+								<h3>Complex NASA API</h3>
+								<p>Utilized two APIs to generate a list of NASA facilities and its local weather (Javascript, CSS, HTML)</p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://play-tictactoegame.netlify.app/" class="image fit thumb" target="_blank"><img src="images/tictactoe.png" alt="" /></a>
+								<h3>Tic Tac Toe (OOP)</h3>
+								<p>Used <strong>object-oriented programming</strong> to create classic Tic Tac Toe game for two players (Javascript, CSS, HTML)</p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://dictionarycn.netlify.app/" class="image fit thumb" target="_blank"><img src="images/dictionary.png" alt="" /></a>
+								<h3>Dictionary Website</h3>
+								<p>Utilized dictionary API to give a definition base on users input (Javascript, CSS, HTML)</p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://favanimequotes.netlify.app/" class="image fit thumb" target="_blank"><img src="images/anime.png" alt="" /></a>
+								<h3>Anime Quotes API</h3>
+								<p>Relive your favorite anime through this quote generator base on users input of title or character (Javascript, CSS, HTML)</p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://starryhoroscope.netlify.app/" class="image fit thumb" target="_blank"><img src="images/workhoroscope.png" alt="" /></a>
 								<h3>Horoscope Website</h3>
-								<p>Created using Javascript, HTML, CSS</p>
+								<p>Enter in your birthdate and find out your sign! (Javascript, HTML, CSS)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://quicktodolist.netlify.app/" class="image fit thumb"><img src="images/worktodo.png" alt="" /></a>
+								<a href="https://quicktodolist.netlify.app/" class="image fit thumb" target="_blank"><img src="images/worktodo.png" alt="" /></a>
 								<h3>To Do List Website</h3>
-								<p>Created using Javascript, HTML, CSS</p>
+								<p>Web application where users can create a to do list, add tasks, delete, and clear all (Javascript, HTML, CSS)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://atlanticnewspaper.netlify.app/" class="image fit thumb"><img src="images/workatlantic.png" alt="" /></a>
+								<a href="https://atlanticnewspaper.netlify.app/" class="image fit thumb" target="_blank"><img src="images/workatlantic.png" alt="" /></a>
 								<h3>Atlantic Newspaper</h3>
 								<p>Responsive landing page using HTML and CSS</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://nytimesnewspaper.netlify.app/" class="image fit thumb"><img src="images/workNyt.png" alt="" /></a>
+								<a href="https://nytimesnewspaper.netlify.app/" class="image fit thumb" target="_blank"><img src="images/workNyt.png" alt="" /></a>
 								<h3>New York Times Newspaper</h3>
 								<p>Responsive landing page using HTML and CSS</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
-								<a href="https://jwleadership.netlify.app/" class="image fit thumb"><img src="images/workjwli.png" alt="" /></a>
+								<a href="https://jwleadership.netlify.app/" class="image fit thumb" target="_blank"><img src="images/workjwli.png" alt="" /></a>
 								<h3>Japanese Women Leadership Initiative</h3>
 								<p>Responsive landing page using HTML and CSS</p>
 							</article>
@@ -75,7 +114,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="#three" class="button">Get In Touch</a></li>
 						</ul>
 					</section>
 
