removed node env. projects since netlify doesn't support

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
-							<article class="col-6 col-12-xsmall ">
+							<!-- <article class="col-6 col-12-xsmall ">
 								<a href="https://easy-palindrome-checker.netlify.app/" class="image fit thumb" target="_blank"><img src="images/palindrome.png" alt="" /></a>
 								<h3>Palindrome Checker</h3>
 								<p>Created a <strong>server-side</strong> palindrome checker in the <strong>node enviroment</strong> (Javascript, CSS, HTML, Node.js)</p>
@@ -51,7 +51,7 @@
 								<a href="https://easycoinflip.netlify.app/" class="image fit thumb" target="_blank"><img src="images/coinflip.png" alt="" /></a>
 								<h3>Coin Flip</h3>
 								<p>Guess heads or tails! Created a <strong>server-side</strong> coin flip in the <strong>node enviroment</strong> (Javascript, CSS, HTML, Node.js)</p>
-							</article>
+							</article> -->
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://matchingcard-game.netlify.app/" class="image fit thumb" target="_blank"><img src="images/matchingcardgame.png" alt="" /></a>
 								<h3>Memory Game</h3>
