docs: included more recent work hosted sites

--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
 								<h3>Coin Flip</h3>
 								<p>Guess heads or tails! Created a <strong>server-side</strong> coin flip in the <strong>node enviroment</strong> (Javascript, CSS, HTML, Node.js)</p>
 							</article> -->
+							<!-- <article class="col-6 col-12-xsmall ">
+								<a href="https://theeventhub.onrender.com/" class="image fit thumb" target="_blank"><img src="images/eventhub.png" alt="" /></a>
+								<h3>EventHub</h3>
+								<p>
+									A full-stack app for all your event needs! Seamlessly combines AI-generated to-do lists, text reminders, a centralized platform for shared images, and integration with Google Maps API for directions, revolutionizing event planning and organization. Create an account, log in and plan your next event! (Javascript, Node.js, Express, Multer, Passport, HTML, EJS, CSS, MongoDB)
+								</p>
+							</article> -->
+							<article class="col-6 col-12-xsmall ">
+								<a href="https://theeventhub.onrender.com/" class="image fit thumb" target="_blank"><img src="images/ehh.png" alt="" /></a>
+								<h3>EventHub</h3>
+								<p>A full-stack app for all your event needs! Seamlessly combines AI-generated to-do lists, text reminders, a centralized platform for shared images, and integration with Google Maps API for directions, revolutionizing event planning and organization. Create an account, log in and plan your next event! (Javascript, Node.js, Express, Multer, Passport, HTML, EJS, CSS, MongoDB)</p>
+							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://matchingcard-game.netlify.app/" class="image fit thumb" target="_blank"><img src="images/matchingcardgame.png" alt="" /></a>
 								<h3>Memory Game</h3>
@@ -122,8 +134,11 @@
 					<span id="skills"></span>
 					<section id="three">
 						<h2>Skills</h2>
-						<p>Javascript, React, Node.js, MongoDB, HTML5, CSS3 </p>
-						<div class="row">
+						<p>JavaScript, React.js, Node.js, MongoDB, Express, React Testing Library, HTML, CSS, GitHub, Git Version Control
+						</br>
+						</br>
+						Familiarity with: Open Source, WCAG 2.2</p>
+						<!-- <div class="row"> -->
 					</section>
 
 					
