--- a/index.html
+++ b/index.html
@@ -45,69 +45,69 @@
 							<!-- <article class="col-6 col-12-xsmall ">
 								<a href="https://easy-palindrome-checker.netlify.app/" class="image fit thumb" target="_blank"><img src="images/palindrome.png" alt="" /></a>
 								<h3>Palindrome Checker</h3>
-								<p>Created a <strong>server-side</strong> palindrome checker in the <strong>node enviroment</strong> (Javascript, CSS, HTML, Node.js)</p>
+								<p>Created a <strong>server-side</strong> palindrome checker in the <strong>node enviroment</strong> (JavaScript, CSS, HTML, Node.js)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://easycoinflip.netlify.app/" class="image fit thumb" target="_blank"><img src="images/coinflip.png" alt="" /></a>
 								<h3>Coin Flip</h3>
-								<p>Guess heads or tails! Created a <strong>server-side</strong> coin flip in the <strong>node enviroment</strong> (Javascript, CSS, HTML, Node.js)</p>
+								<p>Guess heads or tails! Created a <strong>server-side</strong> coin flip in the <strong>node enviroment</strong> (JavaScript, CSS, HTML, Node.js)</p>
 							</article> -->
 							<!-- <article class="col-6 col-12-xsmall ">
 								<a href="https://theeventhub.onrender.com/" class="image fit thumb" target="_blank"><img src="images/eventhub.png" alt="" /></a>
 								<h3>EventHub</h3>
 								<p>
-									A full-stack app for all your event needs! Seamlessly combines AI-generated to-do lists, text reminders, a centralized platform for shared images, and integration with Google Maps API for directions, revolutionizing event planning and organization. Create an account, log in and plan your next event! (Javascript, Node.js, Express, Multer, Passport, HTML, EJS, CSS, MongoDB)
+									A full-stack app for all your event needs! Seamlessly combines AI-generated to-do lists, text reminders, a centralized platform for shared images, and integration with Google Maps API for directions, revolutionizing event planning and organization. Create an account, log in and plan your next event! (JavaScript, Node.js, Express, Multer, Passport, HTML, EJS, CSS, MongoDB)
 								</p>
 							</article> -->
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://myimageboard.onrender.com/" class="image fit thumb" target="_blank"><img src="images/imageboard.png" alt="" /></a>
 								<h3>Image Board - <a href="https://github.com/cintnguyen/first-auth-imageboard" target="_blank">GitHub Repo</a></h3>
-								<p>*Inpired by my Pinterest* Unleash your creativity with Image Board! 🎨 A full-stack app that lets you dive into a world of endless inspiration where every image tells a story. Upload, like, and explore curated boards to spark your imagination. Join the community today and be part of the visual revolution! (Javascript, Node.js, Express, Passport, HTML, CSS, MongoDB)</p>
+								<p>*Inpired by my Pinterest* Unleash your creativity with Image Board! 🎨 A full-stack app that lets you dive into a world of endless inspiration where every image tells a story. Upload, like, and explore curated boards to spark your imagination. Join the community today and be part of the visual revolution! (JavaScript, Node.js, Express, Passport, HTML, CSS, MongoDB)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://theeventhub.onrender.com/" class="image fit thumb" target="_blank"><img src="images/ehh.png" alt="" /></a>
 								<h3>EventHub - <a href="https://github.com/cintnguyen/demo-eventhub" target="_blank">GitHub Repo</a></h3>
-								<p>A full-stack app for all your event needs! Seamlessly combines AI-generated to-do lists, text reminders, a centralized platform for shared images, and integration with Google Maps API for directions, revolutionizing event planning and organization. Create an account, log in and plan your next event! (Javascript, Node.js, Express, Multer, Passport, HTML, EJS, CSS, MongoDB)</p>
+								<p>A full-stack app for all your event needs! Seamlessly combines AI-generated to-do lists, text reminders, a centralized platform for shared images, and integration with Google Maps API for directions, revolutionizing event planning and organization. Create an account, log in and plan your next event! (JavaScript, Node.js, Express, Multer, Passport, HTML, EJS, CSS, MongoDB)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://matchingcard-game.netlify.app/" class="image fit thumb" target="_blank"><img src="images/matchingcardgame.png" alt="" /></a>
 								<h3>Memory Game - <a href="https://github.com/cintnguyen/matching-card" target="_blank">GitHub Repo</a></h3>
-								<p>Play an animal themed matching card game (Javascript, CSS, HTML)</p>
+								<p>Play an animal themed matching card game (JavaScript, CSS, HTML)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://astronomypic.netlify.app/" class="image fit thumb" target="_blank"><img src="images/simplenasa.png" alt="" /></a>
 								<h3>NASA API - <a href="https://github.com/cintnguyen/simple-nasa-api-bootcamp" target="_blank">GitHub Repo</a></h3>
-								<p>Utilized NASA's API to generate astronomy pictures depending on the users chosen date (Javascript, CSS, HTML)</p>
+								<p>Utilized NASA's API to generate astronomy pictures depending on the users chosen date (JavaScript, CSS, HTML)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://nasafacilitiesweather.netlify.app/" class="image fit thumb" target="_blank"><img src="images/complexnasa.png" alt="" /></a>
 								<h3>Complex NASA API - <a href="https://github.com/cintnguyen/complex-nasa-bootcamp" target="_blank">GitHub Repo</a></h3>
-								<p>Utilized two APIs to generate a list of NASA facilities and its local weather (Javascript, CSS, HTML)</p>
+								<p>Utilized two APIs to generate a list of NASA facilities and its local weather (JavaScript, CSS, HTML)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://play-tictactoegame.netlify.app/" class="image fit thumb" target="_blank"><img src="images/tictactoe.png" alt="" /></a>
 								<h3>Tic Tac Toe (OOP) - <a href="https://github.com/cintnguyen/Tic-tac-toe" target="_blank">GitHub Repo</a></h3>
-								<p>Used <strong>object-oriented programming</strong> to create classic Tic Tac Toe game for two players (Javascript, CSS, HTML)</p>
+								<p>Used <strong>object-oriented programming</strong> to create classic Tic Tac Toe game for two players (JavaScript, CSS, HTML)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://dictionarycn.netlify.app/" class="image fit thumb" target="_blank"><img src="images/dictionary.png" alt="" /></a>
 								<h3>Dictionary Website - <a href="https://github.com/cintnguyen/simple-api2-bootcamp" target="_blank">GitHub Repo</a></h3>
-								<p>Utilized dictionary API to give a definition base on users input (Javascript, CSS, HTML)</p>
+								<p>Utilized dictionary API to give a definition base on users input (JavaScript, CSS, HTML)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://favanimequotes.netlify.app/" class="image fit thumb" target="_blank"><img src="images/anime.png" alt="" /></a>
 								<h3>Anime Quotes API - <a href="https://github.com/cintnguyen/simple-api-bootcamp" target="_blank">GitHub Repo</a></h3>
-								<p>Relive your favorite anime through this quote generator base on users input of title or character (Javascript, CSS, HTML)</p>
+								<p>Relive your favorite anime through this quote generator base on users input of title or character (JavaScript, CSS, HTML)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://starryhoroscope.netlify.app/" class="image fit thumb" target="_blank"><img src="images/workhoroscope.png" alt="" /></a>
 								<h3>Horoscope Website - <a href="https://github.com/cintnguyen/Horoscope" target="_blank">GitHub Repo</a></h3>
-								<p>Enter in your birthdate and find out your sign! (Javascript, HTML, CSS)</p>
+								<p>Enter in your birthdate and find out your sign! (JavaScript, HTML, CSS)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://quicktodolist.netlify.app/" class="image fit thumb" target="_blank"><img src="images/worktodo.png" alt="" /></a>
 								<h3>To Do List Website - <a href="https://github.com/cintnguyen/To-Do-List" target="_blank">GitHub Repo</a></h3>
-								<p>Web application where users can create a to do list, add tasks, delete, and clear all (Javascript, HTML, CSS)</p>
+								<p>Web application where users can create a to do list, add tasks, delete, and clear all (JavaScript, HTML, CSS)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://atlanticnewspaper.netlify.app/" class="image fit thumb" target="_blank"><img src="images/workatlantic.png" alt="" /></a>
