docs: included hosted site

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
 								<p>A full-stack app for all your event needs! Seamlessly combines AI-generated to-do lists, text reminders, a centralized platform for shared images, and integration with Google Maps API for directions, revolutionizing event planning and organization. Create an account, log in and plan your next event! (JavaScript, Node.js, Express, Multer, Passport, HTML, EJS, CSS, MongoDB)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
+								<a href="https://levelupshop.onrender.com/" class="image fit thumb" target="_blank"><img src="images/levelupshop.png" alt="" /></a>
+								<h3>Level Up Shop - <a href="https://github.com/cintnguyen/second-auth-shopping" target="_blank">GitHub Repo</a></h3>
+								<p> This full-stack app is aimed at reducing clothing waste and contributing to a greener planet! Post what you're selling, build your shopping cart on the go, and discover amazing finds all in one place. Let's simplify your shopping experience! (JavaScript, Node.js, Express, Passport, HTML, EJS, CSS, MongoDB)</p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
 								<a href="https://matchingcard-game.netlify.app/" class="image fit thumb" target="_blank"><img src="images/matchingcardgame.png" alt="" /></a>
 								<h3>Memory Game - <a href="https://github.com/cintnguyen/matching-card" target="_blank">GitHub Repo</a></h3>
 								<p>Play an animal themed matching card game (JavaScript, CSS, HTML)</p>
