docs: changed description

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://mycontactbook.onrender.com/" class="image fit thumb" target="_blank"><img src="images/contact.png" alt="" /></a>
 								<h3>Contacts - <a href="https://github.com/cintnguyen/express-personal-contacts" target="_blank">GitHub Repo</a></h3>
-								<p> This full-stack app is aimed at reducing clothing waste and contributing to a greener planet! Post what you're selling, build your shopping cart on the go, and discover amazing finds all in one place. Let's simplify your shopping experience! (JavaScript, Node.js, Express, Passport, HTML, EJS, CSS, MongoDB)</p>
+								<p> Your virtual contact book revamped! 📲 Keep all your contacts in one place, effortlessly manage details, and track invite statuses for every event. Say goodbye to scattered contacts and hello to seamless organization!</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://matchingcard-game.netlify.app/" class="image fit thumb" target="_blank"><img src="images/matchingcardgame.png" alt="" /></a>
