docs: updated description

--- a/index.html
+++ b/index.html
@@ -60,14 +60,19 @@
 								</p>
 							</article> -->
 							<article class="col-6 col-12-xsmall ">
+								<a href="https://theeventhub.onrender.com/" class="image fit thumb" target="_blank"><img src="images/ehh.png" alt="" /></a>
+								<h3>EventHub - <a href="https://github.com/cintnguyen/demo-eventhub" target="_blank">GitHub Repo</a></h3>
+								<p>A full-stack app for all your event needs! Seamlessly combines AI-generated to-do lists, text reminders, a centralized platform for shared images, and integration with Google Maps API for directions, revolutionizing event planning and organization. Create an account, log in and plan your next event! <b>(MVC, JavaScript, Node.js, Express, Multer, Passport, HTML, EJS, CSS, MongoDB)</b></p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
+								<a href="" class="image fit thumb" target="_blank"><img src="images/gemini.png" alt="" /></a>
+								<h3>Gemini AI Chatbot - <a href="https://github.com/cintnguyen/Gemini-AI-Chatbot" target="_blank">GitHub Repo</a></h3>
+								<p>React full-stack app that allows users to interact with an AI-powered chatbot using natural language. Unit testing implemented using Jest, React Testing Library. End to end testing using Cypress. <b>(React, JavaScript, Node.js, Express, Jest, RTL, Cypress, Google Auth, Passport, HTML, CSS)</b></p>
+							</article>
+							<article class="col-6 col-12-xsmall ">
 								<a href="https://myimageboard.onrender.com/" class="image fit thumb" target="_blank"><img src="images/imageboard.png" alt="" /></a>
 								<h3>Image Board - <a href="https://github.com/cintnguyen/first-auth-imageboard" target="_blank">GitHub Repo</a></h3>
 								<p>*Inpired by my Pinterest* Unleash your creativity with Image Board! 🎨 A full-stack app that lets you dive into a world of endless inspiration where every image tells a story. Upload, like, and explore curated boards to spark your imagination. Join the community today and be part of the visual revolution! (JavaScript, Node.js, Express, Passport, HTML, CSS, MongoDB)</p>
-							</article>
-							<article class="col-6 col-12-xsmall ">
-								<a href="https://theeventhub.onrender.com/" class="image fit thumb" target="_blank"><img src="images/ehh.png" alt="" /></a>
-								<h3>EventHub - <a href="https://github.com/cintnguyen/demo-eventhub" target="_blank">GitHub Repo</a></h3>
-								<p>A full-stack app for all your event needs! Seamlessly combines AI-generated to-do lists, text reminders, a centralized platform for shared images, and integration with Google Maps API for directions, revolutionizing event planning and organization. Create an account, log in and plan your next event! (JavaScript, Node.js, Express, Multer, Passport, HTML, EJS, CSS, MongoDB)</p>
 							</article>
 							<article class="col-6 col-12-xsmall ">
 								<a href="https://levelupshop.onrender.com/" class="image fit thumb" target="_blank"><img src="images/levelupshop.png" alt="" /></a>
